[b]Version 0.6.2[/b]:

(2008-06-21)
 * Created a huge list of languages (with the ISO 639-1 codes) and make
   the "find subtitles" dialog to use it.
 * The Qt version is saved along with the toolbars state. This should avoid
   problems when upgrading Qt, as the toolbars info won't be used if the
   Qt version doesn't match.
 * Added new action: dock_playlist.

(2008-06-19)
 * Some fixes in the find subtitles dialog: 
    - the dialog is retranslated
    - the table is sorted (sometimes, still doesn't work well, at least with
      Qt 4.2)
    - it won't download the subtitle info again if the filenane didn't changed
 * The floating control will be hidden if the mouse is not over the widget
   within 5 seconds.

(2008-06-18)
 * The option "Subtitles->Find subtitles on the web" now displays a dialog
   which retrieves the info about the available subtitles from 
   opensubtitles.org. To download a subtitle just double click on it or
   click the "Download" button.
   Known issues: the table is not sorted after adding new data.
   To filter a language you have to type the ISO 639-1 code in the language
   box. So to display only the Spanish subtitles you have to type "es", for
   German "de" and so on. In the future there'll be a combobox to select
   the language.

(2008-06-13)
 * Now the SSA/ASS library is enabled by default.
 * gl:yuv=2:force-pbo:ati-hack will be the default under Windows Vista 
   (untested).

(2008-06-12)
 * Updated the Hungarian translation, by CyberDragon <cyberdragon777@gmail.com>

(2008-06-11)
 * Now the default value for option change_equalizer_on_startup is true
   (users which run the previous svn revision will have to make the change
   manually) but the brightness, contrast... won't be changed on startup 
   if the value is 0.
 * Also be sure that the equalizer dialog is updated just after a file begins
   to play.
 * Check that the values for brightness, contrast, saturation. hue and gamma